docs() add enterprise prefix to title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>NestJS - A progressive Node.js web framework</title>
+    <title>Enterprise | NestJS - A progressive Node.js web framework</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
@@ -24,11 +24,11 @@
     <meta name="twitter:card" content="summary" />
     <meta
       property="og:site_name"
-      content="NestJS - A progressive Node.js web framework"
+      content="Enterprise | NestJS - A progressive Node.js web framework"
     />
     <meta
       property="og:title"
-      content="NestJS - A progressive Node.js web framework"
+      content="Enterprise | NestJS - A progressive Node.js web framework"
     />
     <meta
       property="og:description"
@@ -43,7 +43,7 @@
     />
     <meta
       name="twitter:title"
-      content="NestJS - A progressive Node.js web framework"
+      content="Enterprise | NestJS - A progressive Node.js web framework"
     />
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script
