--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       content="NestJS is a framework for building efficient, scalable Node.js web applications. It uses modern JavaScript, is built with TypeScript and combines elements of OOP (Object Oriented Progamming), FP (Functional Programming), and FRP (Functional Reactive Programming)."
     />
     <meta name="robots" content="noodp" />
-    <link rel="canonical" href="https://nestjs.com" />
-    <meta property="og:url" content="https://nestjs.com" />
+    <link rel="canonical" href="https://enterprise.nestjs.com" />
+    <meta property="og:url" content="https:///enterprise.nestjs.com" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
     <meta
