feat() update courses link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
           <li class="hidden-xs">
             <a href="https://nestjs.com">HOME</a>
           </li>
-          <li class="hidden-sm"><a href="#courses">COURSES</a></li>
+          <li class="hidden-sm">
+            <a href="https://courses.nestjs.com">COURSES</a>
+          </li>
           <li class="hidden-sm">
             <a href="https://docs.nestjs.com">DOCUMENTATION</a>
           </li>
@@ -109,7 +111,9 @@
               <li class="hidden-xs">
                 <a href="https://nestjs.com">HOME</a>
               </li>
-              <li class="hidden-sm"><a href="#courses">COURSES</a></li>
+              <li class="hidden-sm">
+                <a href="https://courses.nestjs.com">COURSES</a>
+              </li>
               <li class="hidden-sm">
                 <a href="https://docs.nestjs.com">DOCUMENTATION</a>
               </li>
