--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
       src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
     ></script>
     <script src="scripts.js"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-30617038-7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-30617038-7');
+    </script>
   </head>
 
   <body>
