--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <meta name="twitter:card" content="summary" />
     <meta
       property="og:site_name"
-      content="Enterprise | NestJS - A progressive Node.js web framework"
+      content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
     />
     <meta
       property="og:title"
-      content="Enterprise | NestJS - A progressive Node.js web framework"
+      content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
     />
     <meta
       property="og:description"
@@ -39,7 +39,7 @@
     <meta property="og:image:height" content="650" />
     <meta
       name="twitter:description"
-      content="NestJS is a framework for building efficient, scalable Node.js web applications. It uses modern JavaScript, is built with TypeScript and combines elements of OOP (Object Oriented Progamming), FP (Functional Programming), and FRP (Functional Reactive Programming)."
+      content="NestJS Enterprise Consulting - Helping teams build efficient, scalable applications "
     />
     <meta
       name="twitter:title"
@@ -70,7 +70,7 @@
     <div class="navbar-sticky">
       <div class="container">
         <div class="logo-wrapper d-inline-block">
-          <a href="/">
+          <a href="/" target="_blank">
             <img
               src="img/logo-small.svg"
               alt="NestJS - A progressive Node.js web framework"
@@ -79,13 +79,13 @@
         </div>
         <ul class="nav-wrapper d-inline-block">
           <li class="hidden-xs">
-            <a href="https://nestjs.com">HOME</a>
+            <a href="https://nestjs.com" target="_blank">NESTJS WEBSITE</a>
           </li>
           <li class="hidden-sm">
-            <a href="https://courses.nestjs.com">COURSES</a>
+            <a href="https://courses.nestjs.com" target="_blank">COURSES</a>
           </li>
           <li class="hidden-sm">
-            <a href="https://docs.nestjs.com">DOCUMENTATION</a>
+            <a href="https://docs.nestjs.com" target="_blank">DOCUMENTATION</a>
           </li>
           <li>
             <a
@@ -122,13 +122,13 @@
           <nav class="pull-right">
             <ul class="nav-wrapper">
               <li class="hidden-xs">
-                <a href="https://nestjs.com">HOME</a>
+                <a href="https://nestjs.com" target="_blank">NESTJS WEBSITE</a>
               </li>
               <li class="hidden-sm">
-                <a href="https://courses.nestjs.com">COURSES</a>
+                <a href="https://courses.nestjs.com" target="_blank">COURSES</a>
               </li>
               <li class="hidden-sm">
-                <a href="https://docs.nestjs.com">DOCUMENTATION</a>
+                <a href="https://docs.nestjs.com" target="_blank">DOCUMENTATION</a>
               </li>
               <li>
                 <a
@@ -151,10 +151,12 @@
             </ul>
           </nav>
           <div class="main-wrapper">
-            <h1>Empower your team</h1>
+            <h1>Official Support</h1>
             <h4>
-              Tackle your biggest challenges with tailored solutions and expert
-              services.
+              Our goal is to ensure that your developers are successful and productive with NestJS as well as other modern technologies in today's ever-changing tech world.
+
+<!-- Tackle your biggest challenges with tailored solutions and expert
+              services. -->
             </h4>
             <div class="buttons-wrapper">
               <a href="#contact" class="btn btn-primary d-inline-block anchor">
@@ -175,16 +177,21 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Official support</h2>
+            <h2>Empower your team</h2>
             <p class="large-text">
-              Kicking off a mission-critical development project? Trying to
+                Get expert help directly from the NestJS core team. 
+              <!-- Kicking off a mission-critical development project? Trying to
               accelerate development to keep pace with a growing app backlog? We
-              can help.
+              can help. -->
             </p>
             <p>
-              Nest Advisory services can help get you to market faster. To free
+              With team augmentation, Nest core team members can work directly with your team on a daily basis to help take your project to the next-level. Consider us “part of your team”, tackling the most ambitious projects - right by your side.
+              <!-- Nest Advisory services can help get you to market faster. To free
               you up to focus on what matters, and help you do what you could
-              never do before.
+              never do before. -->
+            </p>
+            <p>
+              We tackle your toughest challenges, and collaborate with your team on many levels such as:
             </p>
             <a href="mailto:support@nestjs.com"
               >Contact us to learn more
@@ -192,26 +199,25 @@
             ></a>
           </div>
           <div class="col-md-6">
+            
             <ul>
               <li>
-                <span><i class="fas fa-check"></i></span> Choose the right
-                strategy for your unique goals
+                <span><i class="fas fa-check"></i></span> Providing technical guidance & architectural reviews
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Accelerate development
-                and delivery by 10x or more
+                <span><i class="fas fa-check"></i></span> Mentoring team members
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Deliver native-powered
-                app experiences with Nest
+                <span><i class="fas fa-check"></i></span> Advising best practices
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Integrate with legacy
-                systems and third-party services
+                <span><i class="fas fa-check"></i></span> Solving design decisions
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Manage risk and avoid
-                technical debt over time
+                <span><i class="fas fa-check"></i></span> Addressing security & performance concerns
+              </li>
+              <li>
+                <span><i class="fas fa-check"></i></span> Performing in-depth code reviews
               </li>
             </ul>
           </div>
@@ -222,12 +228,11 @@
       <div class="container">
         <div class="enterprise-column">
           <h2>
-            Team augmentation. Here for you at every step
+            Team augmentation. <br>By your side at every step
           </h2>
           <p>
-            Accelerate your company’s app development with a secure, long-term
-            solution that’s optimized for enterprise and backed by Nest experts.
-            We can help.
+            NestJS core team members can work directly with your team on a daily basis to help take your project to the next-level.
+            Let us partner with you and your team to develop the most ambitious projects.
           </p>
           <a
             href="mailto:support@nestjs.com"
@@ -241,19 +246,25 @@
     <div class="highlights-wrapper">
       <div class="container">
         <div class="heading">
-          <h4>What you get...</h4>
+          <h4>How can we help you be successful?</h4>
           <p>
-            Nest Advisory includes a broad range of solutions and services to
+            Nest Enterprise Consulting includes a broad range of solutions and services to
             empower your team. Whatever your development goals, we can help.
           </p>
         </div>
         <div class="row">
           <div class="col-md-4 highlight-block">
+            <div class="icon-wrapper"><img src="img/hired.svg" /></div>
+            <h5>Consulting</h5>
+            <p>
+              Let us review and improve your NestJS application and surrounding ecosystem to make your goals a reality.
+            </p>
+          </div>
+          <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/conversation.svg" /></div>
             <h5>Technical guidance</h5>
             <p>
-              Takes advantage of latest JavaScript features, bringing design
-              patterns and mature solutions to node.js world.
+              Let's talk through architecture, database designs, and anything else within the Nest/Node ecosystem.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -268,8 +279,8 @@
             <div class="icon-wrapper"><img src="img/big-data.svg" /></div>
             <h5>In-depth Code Reviews</h5>
             <p>
-              An adaptable ecosystem that is a fully-fledged backbone for all
-              kinds of server-side applications.
+              Takes advantage of latest JavaScript features, bringing design
+              patterns and mature solutions to node.js world.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -288,21 +299,14 @@
               thanks to modular architecture.
             </p>
           </div>
-          <div class="col-md-4 highlight-block">
-            <div class="icon-wrapper"><img src="img/hired.svg" /></div>
-            <h5>Best practices</h5>
-            <p>
-              Takes advantage of latest JavaScript features, bringing design
-              patterns and mature solutions to node.js world.
-            </p>
-          </div>
+          
         </div>
       </div>
     </div>
     <section class="email-wrapper" id="contact">
       <div class="container">
         <hgroup>
-          <h2>Start with Nest Enterprise today.</h2>
+          <h2>Start with NestJS Enterprise today.</h2>
           <p>
             Build with the speed and peace of mind your organization needs.
           </p>
@@ -357,7 +361,6 @@
           </a>
         </div>
         <p>
-          Released under the MIT License <br />
           Official NestJS Consulting
           <a
             href="https://trilon.io"
@@ -366,20 +369,13 @@
             >Trilon.io</a
           ><br />
           Copyright © 2017-2019
-          <a href="https://kamilmysliwiec.com" target="_blank"
+          <a href="https://twitter.com/kammysliwiec" target="_blank"
             >Kamil Mysliwiec</a
           >
           <br />
           Designed by
           <a href="https://dribbble.com/JakubStaron" target="_blank"
             >Jakub Staron</a
-          >, hosted by
-          <a href="https://www.netlify.com" target="_blank">Netlify</a>
-          <br />
-          <a
-            href="https://github.com/nestjs/nest/blob/master/readme_zh.md"
-            target="_blank"
-            >中文说明</a
           >
         </p>
       </div>
