--- a/index.html
+++ b/index.html
@@ -264,39 +264,35 @@
             <div class="icon-wrapper"><img src="img/conversation.svg" /></div>
             <h5>Technical guidance</h5>
             <p>
-              Let's talk through architecture, database designs, and anything else within the Nest/Node ecosystem.
+              Set up best practices for your devops, database designs, or anything else within the Nest/Node ecosystem.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/startup.svg" /></div>
             <h5>Migration Assistance</h5>
             <p>
-              An adaptable ecosystem that is a fully-fledged backbone for all
-              kinds of server-side applications.
+              Get assistance architecting and migrating legacy applications.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/big-data.svg" /></div>
             <h5>In-depth Code Reviews</h5>
             <p>
-              Takes advantage of latest JavaScript features, bringing design
-              patterns and mature solutions to node.js world.
+                Frequent code reviews can eliminate potentially hazardous bugs & issues at an early stage and help enforce best practices
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/puzzle.svg" /></div>
             <h5>Architecture Reviews</h5>
             <p>
-              Gives you true flexibility by allowing use of any other libraries
-              thanks to modular architecture.
+              Let's break down fullstack architecture to analyze to optimize performance and ensure you are using the right tool for the job.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/protect.svg" /></div>
             <h5>Team Trainings</h5>
             <p>
-              Gives you true flexibility by allowing use of any other libraries
-              thanks to modular architecture.
+              Level-up your dev team by having expert-led Nest trainings to get everyone on the same page.
             </p>
           </div>
           
