--- a/index.html
+++ b/index.html
@@ -257,42 +257,42 @@
             <div class="icon-wrapper"><img src="img/hired.svg" /></div>
             <h5>Consulting</h5>
             <p>
-              Let us review and improve your NestJS application and surrounding ecosystem to make your goals a reality.
+              Let us review and improve your Nest application (and surrounding ecosystem) to help  make your goals a reality.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/conversation.svg" /></div>
             <h5>Technical guidance</h5>
             <p>
-              Set up best practices for your devops, database designs, or anything else within the Nest/Node ecosystem.
+              Let's discuss the tools needed to get the job done and help implement everything from data to devops.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/startup.svg" /></div>
             <h5>Migration Assistance</h5>
             <p>
-              Get assistance architecting and migrating legacy applications.
+              We can help assist assembling and migrating legacy applications, ensuring you are using the latest and greatest.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/big-data.svg" /></div>
             <h5>In-depth Code Reviews</h5>
             <p>
-                Frequent code reviews can eliminate potentially hazardous bugs & issues at an early stage and help enforce best practices
+                Frequent code reviews can eliminate potentially hazardous bugs & issues at an early stage while enforcing best practices.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/puzzle.svg" /></div>
             <h5>Architecture Reviews</h5>
             <p>
-              Let's break down fullstack architecture to analyze to optimize performance and ensure you are using the right tool for the job.
+              Let's review everything from system architecture, to devOps, database design, ensuring we solve potential issues <em>before</em> they occur.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/protect.svg" /></div>
             <h5>Team Trainings</h5>
             <p>
-              Level-up your dev team by having expert-led Nest trainings to get everyone on the same page.
+              Level-up your team by having expert-led Nest trainings or workshops. Get everyone up to speed <em>fast</em>.
             </p>
           </div>
           
