--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
         <div class="row">
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/hired.svg" /></div>
-            <h5>Consulting</h5>
+            <h5>Development</h5>
             <p>
-              Let us review and improve your Nest application (and surrounding ecosystem) to help  make your goals a reality.
+              Help achieve your projects goals <em>faster</em> with Nest experts on your team.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
