--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="icon-wrapper"><img src="img/hired.svg" /></div>
             <h5>Development</h5>
             <p>
-              Help achieve your projects goals <em>faster</em> with Nest experts on your team.
+              Achieve your projects goals <em>faster</em> with Nest experts on your team tackling tough issues by your side.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -271,7 +271,7 @@
             <div class="icon-wrapper"><img src="img/startup.svg" /></div>
             <h5>Migration Assistance</h5>
             <p>
-              We can help assist assembling and migrating legacy applications, ensuring you are using the latest and greatest.
+              We can help assist migrating legacy applications, ensuring you are using the latest and greatest.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
