feat() update header, text updates

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <ul class="nav-wrapper d-inline-block">
           <li class="hidden-xs">
-            <a href="https://nestjs.com" target="_blank">NESTJS WEBSITE</a>
+            <a href="https://nestjs.com" target="_blank">OUR WEBSITE</a>
           </li>
           <li class="hidden-sm">
             <a href="https://courses.nestjs.com" target="_blank">COURSES</a>
@@ -122,13 +122,15 @@
           <nav class="pull-right">
             <ul class="nav-wrapper">
               <li class="hidden-xs">
-                <a href="https://nestjs.com" target="_blank">NESTJS WEBSITE</a>
+                <a href="https://nestjs.com" target="_blank">OUR WEBSITE</a>
               </li>
               <li class="hidden-sm">
                 <a href="https://courses.nestjs.com" target="_blank">COURSES</a>
               </li>
               <li class="hidden-sm">
-                <a href="https://docs.nestjs.com" target="_blank">DOCUMENTATION</a>
+                <a href="https://docs.nestjs.com" target="_blank"
+                  >DOCUMENTATION</a
+                >
               </li>
               <li>
                 <a
@@ -151,12 +153,10 @@
             </ul>
           </nav>
           <div class="main-wrapper">
-            <h1>Official Support</h1>
+            <h1>Official support</h1>
             <h4>
-              Our goal is to ensure that your developers are successful and productive with NestJS as well as other modern technologies in today's ever-changing tech world.
-
-<!-- Tackle your biggest challenges with tailored solutions and expert
-              services. -->
+              Our Experts become your development partner to eliminate project
+              risk, tackling the most ambitious projects - right by your side.
             </h4>
             <div class="buttons-wrapper">
               <a href="#contact" class="btn btn-primary d-inline-block anchor">
@@ -177,21 +177,15 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Empower your team</h2>
+            <h2>Accelerate your development</h2>
             <p class="large-text">
-                Get expert help directly from the NestJS core team. 
-              <!-- Kicking off a mission-critical development project? Trying to
-              accelerate development to keep pace with a growing app backlog? We
-              can help. -->
+              We work alongside you to meet your deadlines while avoiding costly
+              tech debt. Challenging issue? We've got you covered.
             </p>
             <p>
-              With team augmentation, Nest core team members can work directly with your team on a daily basis to help take your project to the next-level. Consider us “part of your team”, tackling the most ambitious projects - right by your side.
-              <!-- Nest Advisory services can help get you to market faster. To free
-              you up to focus on what matters, and help you do what you could
-              never do before. -->
-            </p>
-            <p>
-              We tackle your toughest challenges, and collaborate with your team on many levels such as:
+              Our services help get you to market faster. Nest core team members
+              will help you utilizing best practices and choosing the right
+              strategy for unique goals.
             </p>
             <a href="mailto:support@nestjs.com"
               >Contact us to learn more
@@ -199,25 +193,25 @@
             ></a>
           </div>
           <div class="col-md-6">
-            
             <ul>
               <li>
-                <span><i class="fas fa-check"></i></span> Providing technical guidance & architectural reviews
+                <span><i class="fas fa-check"></i></span> Providing technical
+                guidance & architectural reviews
               </li>
               <li>
                 <span><i class="fas fa-check"></i></span> Mentoring team members
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Advising best practices
+                <span><i class="fas fa-check"></i></span> Advising best
+                practices
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Solving design decisions
+                <span><i class="fas fa-check"></i></span> Addressing security &
+                performance concerns
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Addressing security & performance concerns
-              </li>
-              <li>
-                <span><i class="fas fa-check"></i></span> Performing in-depth code reviews
+                <span><i class="fas fa-check"></i></span> Performing in-depth
+                code reviews
               </li>
             </ul>
           </div>
@@ -228,11 +222,12 @@
       <div class="container">
         <div class="enterprise-column">
           <h2>
-            Team augmentation. <br>By your side at every step
+            Team augmentation. By your side at every step
           </h2>
           <p>
-            NestJS core team members can work directly with your team on a daily basis to help take your project to the next-level.
-            Let us partner with you and your team to develop the most ambitious projects.
+            NestJS core team members can work directly with your team on a daily
+            basis to help take your project to the next-level. Let us partner
+            with you and your team to develop the most ambitious projects.
           </p>
           <a
             href="mailto:support@nestjs.com"
@@ -248,8 +243,9 @@
         <div class="heading">
           <h4>How can we help you be successful?</h4>
           <p>
-            Nest Enterprise Consulting includes a broad range of solutions and services to
-            empower your team. Whatever your development goals, we can help.
+            Nest Enterprise Consulting includes a broad range of solutions and
+            services to empower your team. Whatever your development goals, we
+            can help.
           </p>
         </div>
         <div class="row">
@@ -257,14 +253,16 @@
             <div class="icon-wrapper"><img src="img/hired.svg" /></div>
             <h5>Consulting</h5>
             <p>
-              Let us review and improve your NestJS application and surrounding ecosystem to make your goals a reality.
+              Let us review and improve your NestJS application and surrounding
+              ecosystem to make your goals a reality.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/conversation.svg" /></div>
             <h5>Technical guidance</h5>
             <p>
-              Let's talk through architecture, database designs, and anything else within the Nest/Node ecosystem.
+              Let's talk through architecture, database designs, and anything
+              else within the Nest/Node ecosystem.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -299,7 +297,6 @@
               thanks to modular architecture.
             </p>
           </div>
-          
         </div>
       </div>
     </div>
