--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             Team augmentation. By your side at every step
           </h2>
           <p>
-            NestJS core team members can work directly with your team on a daily
+            Nest core team members can work directly with your team on a daily
             basis to help take your project to the next-level. Let us partner
             with you and your team to develop the most ambitious projects.
           </p>
@@ -253,8 +253,8 @@
             <div class="icon-wrapper"><img src="img/hired.svg" /></div>
             <h5>Development</h5>
             <p>
-              Achieve your projects goals <em>faster</em> with Nest experts on
-              your team tackling tough issues by your side.
+              Achieve your projects goals faster with Nest experts on your team
+              tackling tough issues by your side.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -269,7 +269,7 @@
             <div class="icon-wrapper"><img src="img/startup.svg" /></div>
             <h5>Migration Assistance</h5>
             <p>
-              We can help assist migrating legacy applications, ensuring you are
+              We provide a comprehensive migration assistance, ensuring you are
               using the latest and greatest.
             </p>
           </div>
@@ -277,7 +277,7 @@
             <div class="icon-wrapper"><img src="img/big-data.svg" /></div>
             <h5>In-depth Code Reviews</h5>
             <p>
-              Frequent code reviews can eliminate potentially hazardous bugs &
+              Frequent code reviews can eliminate potentially hazardous bugs and
               issues at an early stage while enforcing best practices.
             </p>
           </div>
@@ -285,9 +285,8 @@
             <div class="icon-wrapper"><img src="img/puzzle.svg" /></div>
             <h5>Architecture Reviews</h5>
             <p>
-              Let's review everything from system architecture, to devOps,
-              database design, ensuring we solve potential issues
-              <em>before</em> they occur.
+              Our experts will review your existing system architecture in
+              detail and provide you with tailored recommendations.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -295,7 +294,7 @@
             <h5>Team Trainings</h5>
             <p>
               Level-up your team by having expert-led Nest trainings or
-              workshops. Get everyone up to speed <em>fast</em>.
+              workshops. Get everyone up-to-speed quickly.
             </p>
           </div>
         </div>
