feat() update wording, cat

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
         <div class="heading">
           <h4>How can we help you be successful?</h4>
           <p>
-            Nest Enterprise Consulting includes a broad range of solutions and
-            services to empower your team. Whatever your development goals, we
-            can help.
+            Nest Enterprise Consulting includes a broad range of services to
+            empower your team. We help you grow your business even long after
+            our commitment is done.
           </p>
         </div>
         <div class="row">
@@ -253,16 +253,16 @@
             <div class="icon-wrapper"><img src="img/hired.svg" /></div>
             <h5>Development</h5>
             <p>
-              Achieve your projects goals faster with Nest experts on your team
-              tackling tough issues by your side.
+              Achieve your goals faster with Nest experts on your team tackling
+              challenging issues right by your side.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/conversation.svg" /></div>
             <h5>Technical guidance</h5>
             <p>
-              Let's discuss the tools needed to get the job done and help
-              implement everything from data to devops.
+              Enable your team to get the most out of the technology. Ensure
+              your solutions are secure and reliable.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
