feat() update all wording

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
     <section class="email-wrapper" id="contact">
       <div class="container">
         <hgroup>
-          <h2>Start with NestJS Enterprise today.</h2>
+          <h2>Explore enterprise services today.</h2>
           <p>
-            Build with the speed and peace of mind your organization needs.
+            Let's achieve your most ambitious goals - together.
           </p>
         </hgroup>
         <div class="button-wrapper">
