--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="description"
-      content="NestJS is a framework for building efficient, scalable Node.js web applications. It uses modern JavaScript, is built with TypeScript and combines elements of OOP (Object Oriented Progamming), FP (Functional Programming), and FRP (Functional Reactive Programming)."
+      content="NestJS for Enterprise. Our Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side."
     />
     <meta name="robots" content="noodp" />
     <link rel="canonical" href="https://enterprise.nestjs.com" />
@@ -32,14 +32,14 @@
     />
     <meta
       property="og:description"
-      content="NestJS is a framework for building efficient, scalable Node.js web applications. It uses modern JavaScript, is built with TypeScript and combines elements of OOP (Object Oriented Progamming), FP (Functional Programming), and FRP (Functional Reactive Programming)."
+      content="NestJS for Enterprise. Our Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side."
     />
     <meta property="og:image" content="https://nestjs.com/img/nest-og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="650" />
     <meta
       name="twitter:description"
-      content="NestJS Enterprise Consulting - Helping teams build efficient, scalable applications "
+      content="NestJS for Enterprise. Our Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side."
     />
     <meta
       name="twitter:title"
