--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <h1>Official support</h1>
             <h4>
               Our Experts become your development partner to eliminate project
-              risk, tackling the most ambitious projects - right by your side.
+              risk, tackling the most ambitious projects - <em>right by your side</em>.
             </h4>
             <div class="buttons-wrapper">
               <a href="#contact" class="btn btn-primary d-inline-block anchor">
@@ -183,9 +183,9 @@
               tech debt. Challenging issue? We've got you covered.
             </p>
             <p>
-              Our services help get you to market faster. Nest core team members
-              will help you utilizing best practices and choosing the right
-              strategy for unique goals.
+              <strong>Our goal is to help you get to market faster</strong>. Nest core team members
+              will help you utilize best practices and choose the right
+              strategy for <em>your</em> unique goals.
             </p>
             <a href="mailto:support@nestjs.com"
               >Contact us to learn more
@@ -195,23 +195,23 @@
           <div class="col-md-6">
             <ul>
               <li>
-                <span><i class="fas fa-check"></i></span> Providing technical
-                guidance & architectural reviews
+                <span><i class="fas fa-check"></i></span> Providing <strong>technical
+                guidance</strong> & architectural reviews
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Mentoring team members
+                <span><i class="fas fa-check"></i></span> <strong>Mentoring</strong> team members
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Advising best
+                <span><i class="fas fa-check"></i></span> <strong>Advising</strong> best
                 practices
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Addressing security &
-                performance concerns
+                <span><i class="fas fa-check"></i></span> Addressing <strong>security &
+                performance</strong> concerns
               </li>
               <li>
                 <span><i class="fas fa-check"></i></span> Performing in-depth
-                code reviews
+                <strong>code reviews</strong>
               </li>
             </ul>
           </div>
@@ -226,8 +226,8 @@
           </h2>
           <p>
             Nest core team members can work directly with your team on a daily
-            basis to help take your project to the next-level. Let us partner
-            with you and your team to develop the most ambitious projects.
+            basis to help take your project to the next-level. 
+            <strong>Let us partner with you</strong> and your team to develop the most ambitious projects.
           </p>
           <a
             href="mailto:support@nestjs.com"
