feat() wording update

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
               tech debt. Challenging issue? We've got you covered.
             </p>
             <p>
-              Our services help get you to market faster. Nest core team members
-              will help you utilizing best practices and choosing the right
+              Our goal is to help you get to market faster. Nest core team
+              members will help you utilize best practices and choose the right
               strategy for unique goals.
             </p>
             <a href="mailto:support@nestjs.com"
