feat() add title prop to links

--- a/index.html
+++ b/index.html
@@ -79,13 +79,28 @@
         </div>
         <ul class="nav-wrapper d-inline-block">
           <li class="hidden-xs">
-            <a href="https://nestjs.com" target="_blank">OUR WEBSITE</a>
+            <a
+              href="https://nestjs.com"
+              title="NestJS - A progressive Node.js web framework"
+              target="_blank"
+              >OUR WEBSITE</a
+            >
           </li>
           <li class="hidden-sm">
-            <a href="https://courses.nestjs.com" target="_blank">COURSES</a>
+            <a
+              href="https://courses.nestjs.com"
+              title="Courses | NestJS - A progressive Node.js web framework"
+              target="_blank"
+              >COURSES</a
+            >
           </li>
           <li class="hidden-sm">
-            <a href="https://docs.nestjs.com" target="_blank">DOCUMENTATION</a>
+            <a
+              href="https://docs.nestjs.com"
+              title="Documentation | NestJS - A progressive Node.js web framework"
+              target="_blank"
+              >DOCUMENTATION</a
+            >
           </li>
           <li>
             <a
@@ -122,13 +137,26 @@
           <nav class="pull-right">
             <ul class="nav-wrapper">
               <li class="hidden-xs">
-                <a href="https://nestjs.com" target="_blank">OUR WEBSITE</a>
+                <a
+                  href="https://nestjs.com"
+                  title="NestJS - A progressive Node.js web framework"
+                  target="_blank"
+                  >OUR WEBSITE</a
+                >
               </li>
               <li class="hidden-sm">
-                <a href="https://courses.nestjs.com" target="_blank">COURSES</a>
+                <a
+                  href="https://courses.nestjs.com"
+                  title="Courses | NestJS - A progressive Node.js web framework"
+                  target="_blank"
+                  >COURSES</a
+                >
               </li>
               <li class="hidden-sm">
-                <a href="https://docs.nestjs.com" target="_blank"
+                <a
+                  href="https://docs.nestjs.com"
+                  title="Documentation | NestJS - A progressive Node.js web framework"
+                  target="_blank"
                   >DOCUMENTATION</a
                 >
               </li>
