--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     />
     <meta
       name="description"
-      content="NestJS for Enterprise. Our Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side."
+      content="NestJS Consulting for Enterprise. Our Experts become your development partner tackling the most ambitious projects - right by your side."
     />
     <meta name="robots" content="noodp" />
     <link rel="canonical" href="https://enterprise.nestjs.com" />
     <meta property="og:url" content="https:///enterprise.nestjs.com" />
     <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="og:site_name"
       content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
@@ -32,18 +32,18 @@
     />
     <meta
       property="og:description"
-      content="NestJS for Enterprise. Our Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side."
+      content="NestJS Consulting for Enterprise. Our Experts become your development partner tackling the most ambitious projects - right by your side."
     />
     <meta property="og:image" content="https://nestjs.com/img/nest-og.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="650" />
     <meta
       name="twitter:description"
-      content="NestJS for Enterprise. Our Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side."
+      content="NestJS Consulting for Enterprise. Our Experts become your development partner tackling the most ambitious projects - right by your side."
     />
     <meta
       name="twitter:title"
-      content="Enterprise | NestJS - A progressive Node.js web framework"
+      content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
     />
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script
@@ -241,6 +241,9 @@
                 <span><i class="fas fa-check"></i></span> Performing in-depth
                 code reviews
               </li>
+              <li>
+                <span><i class="fas fa-check"></i></span> Long-term support (LTS) & upgrade assistance
+              </li>
             </ul>
           </div>
         </div>
@@ -311,10 +314,9 @@
           </div>
           <div class="col-md-4 highlight-block">
             <div class="icon-wrapper"><img src="img/puzzle.svg" /></div>
-            <h5>Architecture Reviews</h5>
+            <h5>Long-Term Support (LTS)</h5>
             <p>
-              Our experts will review your existing system architecture in
-              detail and provide you with tailored recommendations.
+              Have piece of mind with Nest long-term support (LTS), priority fixes, upgrade assistance, and live troubleshooting.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
@@ -351,8 +353,8 @@
         <hgroup>
           <h3>Join our Newsletter</h3>
           <p>
-            Subscribe to stay up to date with the latest Nest updates, features,
-            and videos!
+            <strong>Subscribe to stay up to date with the latest Nest updates, features,
+            and videos!</strong>
           </p>
         </hgroup>
         <div class="newsletter-form">
