--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
         <hgroup>
           <h3>Join our Newsletter</h3>
           <p>
-            <strong>Subscribe to stay up to date with the latest Nest updates, features,
-            and videos!</strong>
+            Subscribe to stay up to date with the latest Nest updates, features,
+            and videos!
           </p>
         </hgroup>
         <div class="newsletter-form">
