meta() add gs meta tag

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       name="twitter:title"
       content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
     />
+    <meta name="google-site-verification" content="lstrN-qqAaF2ypwi1xcDN4skjk0egXcmRMoLluMxAog" />
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script
       defer
