--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Enterprise | NestJS - A progressive Node.js web framework</title>
+    <title>Enterprise | NestJS - A progressive Node.js framework</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0"
@@ -24,11 +24,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       property="og:site_name"
-      content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
+      content="Enterprise Consulting | NestJS - A progressive Node.js framework"
     />
     <meta
       property="og:title"
-      content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
+      content="Enterprise Consulting | NestJS - A progressive Node.js framework"
     />
     <meta
       property="og:description"
@@ -43,9 +43,12 @@
     />
     <meta
       name="twitter:title"
-      content="Enterprise Consulting | NestJS - A progressive Node.js web framework"
+      content="Enterprise Consulting | NestJS - A progressive Node.js framework"
     />
-    <meta name="google-site-verification" content="lstrN-qqAaF2ypwi1xcDN4skjk0egXcmRMoLluMxAog" />
+    <meta
+      name="google-site-verification"
+      content="lstrN-qqAaF2ypwi1xcDN4skjk0egXcmRMoLluMxAog"
+    />
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <script
       defer
@@ -61,9 +64,9 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag('js', new Date());
+      gtag("js", new Date());
 
-      gtag('config', 'UA-30617038-7');
+      gtag("config", "UA-30617038-7");
     </script>
   </head>
 
@@ -74,7 +77,7 @@
           <a href="/" target="_blank">
             <img
               src="img/logo-small.svg"
-              alt="NestJS - A progressive Node.js web framework"
+              alt="NestJS - A progressive Node.js framework"
             />
           </a>
         </div>
@@ -82,7 +85,7 @@
           <li class="hidden-xs">
             <a
               href="https://nestjs.com"
-              title="NestJS - A progressive Node.js web framework"
+              title="NestJS - A progressive Node.js framework"
               target="_blank"
               >OUR WEBSITE</a
             >
@@ -90,7 +93,7 @@
           <li class="hidden-sm">
             <a
               href="https://courses.nestjs.com"
-              title="Courses | NestJS - A progressive Node.js web framework"
+              title="Courses | NestJS - A progressive Node.js framework"
               target="_blank"
               >COURSES</a
             >
@@ -98,7 +101,7 @@
           <li class="hidden-sm">
             <a
               href="https://docs.nestjs.com"
-              title="Documentation | NestJS - A progressive Node.js web framework"
+              title="Documentation | NestJS - A progressive Node.js framework"
               target="_blank"
               >DOCUMENTATION</a
             >
@@ -131,7 +134,7 @@
             <a href="/">
               <img
                 src="img/logo-small.svg"
-                alt="NestJS - A progressive Node.js web framework"
+                alt="NestJS - A progressive Node.js framework"
               />
             </a>
           </div>
@@ -140,7 +143,7 @@
               <li class="hidden-xs">
                 <a
                   href="https://nestjs.com"
-                  title="NestJS - A progressive Node.js web framework"
+                  title="NestJS - A progressive Node.js framework"
                   target="_blank"
                   >OUR WEBSITE</a
                 >
@@ -148,7 +151,7 @@
               <li class="hidden-sm">
                 <a
                   href="https://courses.nestjs.com"
-                  title="Courses | NestJS - A progressive Node.js web framework"
+                  title="Courses | NestJS - A progressive Node.js framework"
                   target="_blank"
                   >COURSES</a
                 >
@@ -156,7 +159,7 @@
               <li class="hidden-sm">
                 <a
                   href="https://docs.nestjs.com"
-                  title="Documentation | NestJS - A progressive Node.js web framework"
+                  title="Documentation | NestJS - A progressive Node.js framework"
                   target="_blank"
                   >DOCUMENTATION</a
                 >
@@ -243,7 +246,8 @@
                 code reviews
               </li>
               <li>
-                <span><i class="fas fa-check"></i></span> Long-term support (LTS) & upgrade assistance
+                <span><i class="fas fa-check"></i></span> Long-term support
+                (LTS) & upgrade assistance
               </li>
             </ul>
           </div>
@@ -317,7 +321,8 @@
             <div class="icon-wrapper"><img src="img/puzzle.svg" /></div>
             <h5>Long-Term Support (LTS)</h5>
             <p>
-              Have piece of mind with Nest long-term support (LTS), priority fixes, upgrade assistance, and live troubleshooting.
+              Have piece of mind with Nest long-term support (LTS), priority
+              fixes, upgrade assistance, and live troubleshooting.
             </p>
           </div>
           <div class="col-md-4 highlight-block">
