update structured data, copyright data, sitemap

--- a/index.html
+++ b/index.html
@@ -68,6 +68,39 @@
 
       gtag("config", "UA-30617038-7");
     </script>
+
+    <script type="application/ld+json">
+      {
+        "inLanguage": "en",
+        "@id": "https://enterprise.nestjs.com",
+        "about": {
+          "name": "Consulting"
+        },
+        "@type": "Website",
+        "image": "https://courses.nestjs.com/img/nest-og.png",
+        "description": "NestJS Experts become your development partner to eliminate project risk, tackling the most ambitious projects - right by your side.",
+        "publisher": {
+          "name": "NestJS",
+          "sameAs": "www.nestjs.com",
+          "@type": "Organization"
+        },
+        "@context": "http://schema.org",
+        "audience": {
+          "audienceType": [
+            "Everyone who's interested in building modern, scalable and high-performing web applications.",
+            "Everyone who needs project assistance, migrating applications, help advising best practices.",
+            "Teams who need additional team members to help assist pushing the project forward."
+          ],
+          "@type": "Audience"
+        },
+        "provider": {
+          "name": "NestJS",
+          "sameAs": "https://nestjs.com",
+          "@type": "Organization"
+        }
+      }
+    </script>
+
   </head>
 
   <body>
@@ -403,7 +436,7 @@
             target="_blank"
             >Trilon.io</a
           ><br />
-          Copyright © 2017-2019
+          Copyright © 2017-2020
           <a href="https://twitter.com/kammysliwiec" target="_blank"
             >Kamil Mysliwiec</a
           >
