fix(): fix typo

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <div class="icon-wrapper"><img src="img/puzzle.svg" /></div>
             <h5>Long-Term Support (LTS)</h5>
             <p>
-              Have piece of mind with Nest long-term support (LTS), priority
+              Have peace of mind with Nest long-term support (LTS), priority
               fixes, upgrade assistance, and live troubleshooting.
             </p>
           </div>
