feat(): add who is using nest section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
         }
       }
     </script>
-
   </head>
 
   <body>
@@ -384,6 +383,50 @@
         </div>
       </div>
     </section>
+    <div class="discover-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h4>Who is using Nest?</h4>
+          <p>
+            Nest is proudly powering a large ecosystem of enterprises and
+            products out there. Wanna see your logo here?
+            <a href="https://github.com/nestjs/nest/issues/1006" target="_blank"
+              >Find out more</a
+            >.
+          </p>
+        </div>
+        <div class="companies-tiles">
+          <a href="https://www.sanofi.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/sanofi.png" />
+          </a>
+          <a href="https://adidas.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/adidas.svg" width="90" />
+          </a>
+          <a href="https://www.autodesk.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/autodesk.png" height="70" />
+          </a>
+          <a
+            href="https://www.societegenerale.fr/"
+            target="_blank"
+            rel="nofollow"
+          >
+            <img src="img/logos/societe-generale-logo.png" />
+          </a>
+          <a href="https://roche.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/roche-logo.png" height="55" />
+          </a>
+          <a href="https://rewe-digital.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/rewe.svg" width="120" />
+          </a>
+          <a href="https://capgemini.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/capgemini.svg" />
+          </a>
+          <a href="https://www.decathlon.com/" target="_blank" rel="nofollow">
+            <img src="img/logos/decathlon.png" />
+          </a>
+        </div>
+      </div>
+    </div>
     <div class="newsletter-wrapper">
       <div class="signup container">
         <div class="envelope-bg">
