--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
           <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
             target="_blank">COURSES</a>
         </li>
+        <li class="hidden-sm hidden-md">
+          <a href="https://devtools.nestjs.com" title="Devtools | NestJS - A progressive Node.js framework"
+            target="_blank"><span class="new">NEW</span> DEVTOOLS</a>
+        </li>
         <li class="hidden-sm">
           <a href="https://docs.nestjs.com" title="Documentation | NestJS - A progressive Node.js framework"
             target="_blank">DOCUMENTATION</a>
@@ -131,6 +135,10 @@
             <li class="hidden-sm">
               <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
                 target="_blank">COURSES</a>
+            </li>
+            <li class="hidden-sm hidden-md">
+              <a href="https://devtools.nestjs.com" title="Devtools | NestJS - A progressive Node.js framework"
+                target="_blank"><span class="new">NEW</span> DEVTOOLS</a>
             </li>
             <li class="hidden-sm">
               <a href="https://docs.nestjs.com" title="Documentation | NestJS - A progressive Node.js framework"
