--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <meta name="msapplication-config" content="img/browserconfig.xml" />
   <meta name="msapplication-TileColor" content="#ed2945">
   <meta name="theme-color" content="#ffffff">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v6.4.2/js/all.js"></script>
   <script src="scripts.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-30617038-7"></script>
   <script>
@@ -146,12 +146,12 @@
             </li>
             <li>
               <a href="https://github.com/nestjs/nest" target="_blank" class="icon">
-                <i class="fab fa-github"></i>
+                <i class="fa-brands fa-github"></i>
               </a>
             </li>
             <li>
               <a href="https://twitter.com/nestframework" target="_blank" class="icon">
-                <i class="fab fa-twitter"></i>
+                <i class="fa-brands fa-x-twitter"></i>
               </a>
             </li>
           </ul>
@@ -398,10 +398,10 @@
     <div class="container">
       <div class="social-wrapper">
         <a href="https://github.com/nestjs/nest" target="_blank" class="icon">
-          <i class="fab fa-github"></i>
+          <i class="fa-brands fa-github"></i>
         </a>
         <a href="https://twitter.com/nestframework" target="_blank" class="icon">
-          <i class="fab fa-twitter"></i>
+          <i class="fa-brands fa-x-twitter"></i>
         </a>
       </div>
       <p>
