chore: update colors

--- a/index.html
+++ b/index.html
@@ -86,26 +86,41 @@
     <div class="container">
       <div class="logo-wrapper d-inline-block">
         <a href="/" target="_blank">
-          <img src="img/logo-small.svg" alt="NestJS - A progressive Node.js framework" />
+          <img src="img/logo-small-gradient.svg" alt="NestJS - A progressive Node.js framework" />
         </a>
       </div>
       <ul class="nav-wrapper d-inline-block">
         <li class="hidden-xs">
-          <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework" target="_blank">OUR WEBSITE</a>
+          <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework" target="_blank"><span>OUR WEBSITE</span></a>
         </li>
         <li class="hidden-sm">
           <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
-            target="_blank">COURSES</a>
+            target="_blank"><span>COURSES</span></a>
         </li>
         <li class="hidden-sm hidden-md">
           <a href="https://devtools.nestjs.com" title="Devtools | NestJS - A progressive Node.js framework"
-            target="_blank"><span class="new">NEW</span> DEVTOOLS</a>
+            target="_blank"><span class="new">NEW</span> <span>DEVTOOLS</span></a>
         </li>
         <li class="hidden-sm">
           <a href="https://docs.nestjs.com" title="Documentation | NestJS - A progressive Node.js framework"
-            target="_blank">DOCUMENTATION</a>
+            target="_blank"><span>DOCUMENTATION</span></a>
         </li>
         <li>
+          <svg width="0" height="0" class="gradient-svg">
+            <defs>
+              <linearGradient
+                id="primary-gradient"
+                x1="0%"
+                x2="100%"
+                y1="0%"
+                y2="0%"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop offset="0%" stop-color="#ea2845" />
+                <stop offset="100%" stop-color="#ea2868" />
+              </linearGradient>
+            </defs>
+          </svg>
           <a href="https://github.com/nestjs/nest" target="_blank" class="icon m-l-30">
             <i class="fab fa-github"></i>
           </a>
@@ -123,26 +138,26 @@
       <div class="top-wrapper">
         <div class="logo-wrapper d-inline-block">
           <a href="/">
-            <img src="img/logo-small.svg" alt="NestJS - A progressive Node.js framework" />
+            <img src="img/logo-small-gradient.svg" alt="NestJS - A progressive Node.js framework" />
           </a>
         </div>
         <nav class="pull-right">
           <ul class="nav-wrapper">
             <li class="hidden-xs">
-              <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework" target="_blank">OUR
-                WEBSITE</a>
+              <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework" target="_blank"><span>OUR
+                WEBSITE</span></a>
             </li>
             <li class="hidden-sm">
               <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
-                target="_blank">COURSES</a>
+                target="_blank"><span>COURSES</span></a>
             </li>
             <li class="hidden-sm hidden-md">
               <a href="https://devtools.nestjs.com" title="Devtools | NestJS - A progressive Node.js framework"
-                target="_blank"><span class="new">NEW</span> DEVTOOLS</a>
+                target="_blank"><span class="new">NEW</span> <span>DEVTOOLS</span></a>
             </li>
             <li class="hidden-sm">
               <a href="https://docs.nestjs.com" title="Documentation | NestJS - A progressive Node.js framework"
-                target="_blank">DOCUMENTATION</a>
+                target="_blank"><span>DOCUMENTATION</span></a>
             </li>
             <li>
               <a href="https://github.com/nestjs/nest" target="_blank" class="icon">
@@ -164,7 +179,7 @@
           </h4>
           <div class="buttons-wrapper">
             <a href="#contact" class="btn btn-primary d-inline-block anchor">
-              Get in touch</a>
+              <span>Get in touch</span></a>
             <a href="#support" class="btn btn-secondary d-inline-block anchor">
               <span>Read more</span>
             </a>
@@ -188,7 +203,7 @@
             strategy for unique goals.
           </p>
           <a href="mailto:support@nestjs.com">Contact us to learn more
-            <i class="fas fa-long-arrow-alt-right"></i></a>
+          </a>
         </div>
         <div class="col-md-6">
           <ul>
@@ -366,15 +381,12 @@
         </p>
       </hgroup>
       <div class="button-wrapper">
-        <a href="mailto:support@nestjs.com" class="btn btn-primary">Contact Us</a>
+        <a href="mailto:support@nestjs.com" class="btn btn-primary"><span>Contact us</span></a>
       </div>
     </div>
   </section>
   <div class="newsletter-wrapper">
     <div class="signup container">
-      <div class="envelope-bg">
-        <i class="far fa-envelope"></i>
-      </div>
       <hgroup>
         <h3>Join our Newsletter</h3>
         <p>
