--- a/index.html
+++ b/index.html
@@ -98,14 +98,47 @@
             target="_blank"><span>COURSES</span></a>
         </li>
         <li class="hidden-sm hidden-md">
-          <a href="https://devtools.nestjs.com" title="Devtools | NestJS - A progressive Node.js framework"
-            target="_blank"><span class="new">NEW</span> <span>DEVTOOLS</span></a>
+          <span
+            ><span class="new">NEW</span
+            ><span class="text">RESOURCES</span>
+            <i class="fa-solid fa-chevron-down arrow"></i
+          ></span>
+          <div class="sub-nav-outlet">
+            <div class="sub-nav-wrapper sub-nav-wrapper--light">
+              <span class="nav-category">Education</span>
+              <ul>
+                <li>
+                  <a
+                    href="https://docs.nestjs.com"
+                    title="Documentation | NestJS - A progressive Node.js framework"
+                    >Documentation</a
+                  >
+                </li>
+              </ul>
+              <span class="nav-category">Platforms</span>
+              <ul>
+                <li>
+                  <a
+                    href="https://jobs.nestjs.com"
+                    title="Jobs | NestJS - A progressive Node.js framework"
+                    >Jobs</a
+                  >
+                </li>
+              </ul>
+              <span class="nav-category">Tools</span>
+              <ul>
+                <li>
+                  <a
+                    href="https://devtools.nestjs.com"
+                    title="Devtools | NestJS - A progressive Node.js framework"
+                    >Devtools</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
         </li>
-        <li class="hidden-sm">
-          <a href="https://docs.nestjs.com" title="Documentation | NestJS - A progressive Node.js framework"
-            target="_blank"><span>DOCUMENTATION</span></a>
-        </li>
-        <li>
+        <li class="social-icon">
           <svg width="0" height="0" class="gradient-svg">
             <defs>
               <linearGradient
@@ -125,7 +158,7 @@
             <i class="fab fa-github"></i>
           </a>
         </li>
-        <li>
+        <li class="social-icon">
           <a href="https://twitter.com/nestframework" target="_blank" class="icon">
             <i class="fab fa-twitter"></i>
           </a>
@@ -151,20 +184,53 @@
               <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
                 target="_blank"><span>COURSES</span></a>
             </li>
-            <li class="hidden-sm hidden-md">
-              <a href="https://devtools.nestjs.com" title="Devtools | NestJS - A progressive Node.js framework"
-                target="_blank"><span class="new">NEW</span> <span>DEVTOOLS</span></a>
-            </li>
             <li class="hidden-sm">
-              <a href="https://docs.nestjs.com" title="Documentation | NestJS - A progressive Node.js framework"
-                target="_blank"><span>DOCUMENTATION</span></a>
+              <span class="sub-nav-trigger"
+                ><span class="new">NEW</span
+                ><span class="text">RESOURCES</span>
+                <i class="fa-solid fa-chevron-down arrow"></i
+              ></span>
+              <div class="sub-nav-outlet">
+                <div class="sub-nav-wrapper">
+                  <span class="nav-category">Education</span>
+                  <ul>
+                    <li>
+                      <a
+                        href="https://docs.nestjs.com"
+                        title="Documentation | NestJS - A progressive Node.js framework"
+                        >Documentation</a
+                      >
+                    </li>
+                  </ul>
+                  <span class="nav-category">Platforms</span>
+                  <ul>
+                    <li>
+                      <a
+                        href="https://jobs.nestjs.com"
+                        title="Jobs | NestJS - A progressive Node.js framework"
+                        >Jobs</a
+                      >
+                    </li>
+                  </ul>
+                  <span class="nav-category">Tools</span>
+                  <ul>
+                    <li>
+                      <a
+                        href="https://devtools.nestjs.com"
+                        title="Devtools | NestJS - A progressive Node.js framework"
+                        >Devtools</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </li>
-            <li>
+            <li class="social-icon">
               <a href="https://github.com/nestjs/nest" target="_blank" class="icon">
                 <i class="fa-brands fa-github"></i>
               </a>
             </li>
-            <li>
+            <li class="social-icon">
               <a href="https://twitter.com/nestframework" target="_blank" class="icon">
                 <i class="fa-brands fa-x-twitter"></i>
               </a>
