--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         </div>
         <div class="mobile-nav-icon pull-right">
           <span></span>
+          <div class="fill"></div>
         </div>
         <nav class="mobile-nav">
           <div class="mobile-nav-head">
