chore: remove target blank

--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
       </div>
       <ul class="nav-wrapper d-inline-block">
         <li>
-          <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework" target="_blank"><span>OUR WEBSITE</span></a>
+          <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework"><span>OUR WEBSITE</span></a>
         </li>
         <li>
-          <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
-            target="_blank"><span>COURSES</span></a>
+          <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"><span>COURSES</span></a>
         </li>
         <li>
           <span
@@ -240,12 +239,11 @@
         <nav class="pull-right hidden-md">
           <ul class="nav-wrapper">
             <li>
-              <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework" target="_blank"><span>OUR
+              <a href="https://nestjs.com" title="NestJS - A progressive Node.js framework"><span>OUR
                 WEBSITE</span></a>
             </li>
             <li>
-              <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"
-                target="_blank"><span>COURSES</span></a>
+              <a href="https://courses.nestjs.com" title="Courses | NestJS - A progressive Node.js framework"><span>COURSES</span></a>
             </li>
             <li>
               <span class="sub-nav-trigger"
