--- a/index.html
+++ b/index.html
@@ -133,6 +133,13 @@
                     >Devtools</a
                   >
                 </li>
+                <li>
+                  <a
+                    href="https://mau.nestjs.com"
+                    title="Deploy with Mau | NestJS - A progressive Node.js framework"
+                    >Mau</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -208,7 +215,7 @@
               <a
                 href="https://jobs.nestjs.com"
                 title="Jobs | NestJS - A progressive Node.js framework"
-                ><span>JOBS</span><span class="new">NEW</span></a
+                ><span>JOBS</span></a
               >
             </li>
             <li>
@@ -216,6 +223,13 @@
                 href="https://devtools.nestjs.com"
                 title="Devtools | NestJS - A progressive Node.js framework"
                 ><span>DEVTOOLS</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://mau.nestjs.com"
+                title="Deploy with Mau | NestJS - A progressive Node.js framework"
+                ><span>DEPLOY WITH MAU</span><span class="new">NEW</span></a
               >
             </li>
             <li>
@@ -280,6 +294,13 @@
                         href="https://devtools.nestjs.com"
                         title="Devtools | NestJS - A progressive Node.js framework"
                         >Devtools</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://mau.nestjs.com"
+                        title="Deploy with Mau | NestJS - A progressive Node.js framework"
+                        >Deploy with Mau</a
                       >
                     </li>
                   </ul>
